styles/app.css
/* ... */
.current-account-info {
  margin-bottom: -8px;
}

[data-value="current-account"] {
  color: rgb(var(--primary));
}

text-field[name="username"] {
  max-width: 18ch;
}

form[name="app-settings"] > *:last-child {
  padding-bottom: 0;
}

#changelog {
  --from-x: 0;
  --from-y: 1rem;
}

.changelog-card {
  margin: auto;
}

.changelog-card > ul {
  margin: 0;
}

.changelog-card li + li {
  margin-top: .4em;
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! À PROPOS DU SHINYDEX !!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

.a-propos-conteneur {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.app-icon {
  display: flex;
  width: 120px;
  height: 120px;
  min-height: 120px;
  border-radius: 50%;
  overflow: hidden;
  margin: 0 auto;
  border: 1px solid rgb(var(--outline-variant));
}

.app-icon > svg {
  width: 120px;
  height: 120px;
  --background-top: rgb(var(--icon-top-bg-color));
}

.link-to-remiscan {
  display: flex;
  align-items: center;
  gap: 1ch;
}

remiscan-logo {
  --text-color: rgb(var(--primary)) !important;
}

.lien-source {
  color: var(--accent-color);
  align-items: center;
  display: inline-flex;
}

@media (any-pointer: coarse) {
  .lien-source {
    min-height: 30px;
  }
}

.lien-source .material-icons {
  vertical-align: middle;
  margin-right: 4px;
}

.lien-source > span:nth-of-type(2) {
  text-decoration: underline;
}

.lien-source:has(span:nth-of-type(2)) {
  text-decoration: none;
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! PARTAGE !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!! SPRITE VIEWER, FILTER MENU & OBFUSCATOR !!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

#sprite-viewer,
#filter-menu,
#user-search,
#changelog,
#top-layer,
#obfuscator {
  grid-column: 1 / -1;
  grid-row: 1 / -1;
}

#sprite-viewer {
  z-index: var(--z-sprite-viewer);
}

#obfuscator {
  z-index: var(--z-obfuscator);
}

#top-layer,
#filter-menu,
#user-search,
#changelog {
  background-color: transparent;
  z-index: var(--z-obfuscator);
}

#filter-menu,
#user-search,
#changelog {
  background: rgb(var(--surface), .5);
}

body[data-section-actuelle~="top-layer"] #top-layer {
  display: contents;
}

#top-layer > * {
  z-index: var(--z-top-layer);
}

/*@media (max-width: 719px) {
  #top-layer > .mobile-centered {
    max-width: calc(100vw - 16px) !important;
    max-height: calc(100vh - 16px) !important;
    min-width: unset !important;
    margin: 8px;
    top: 50vh !important;
    left: 50vw !important;
    transform: translate(-50%, -50%);
  }
}*/



/*
 * Notification
 */

.notification-container {
  width: 100%;
  height: auto;
  max-height: calc(50vh - var(--bottom-bar-height));
  overflow-y: auto;
  position: fixed;
  z-index: var(--z-notification);
  top: calc(100% - var(--bottom-bar-height));
  transform: translateY(calc(-1px * var(--notification-container-height, 0)));
  transition: transform .3s var(--easing-standard);
}

.notification-container.no-animation {
  transition: none;
}

.notification-container > .snackbar:first-child {
  margin-top: 0;
}

.snackbar.signin-prompt {
  grid-template-columns: 1fr var(--dismiss-column);
  grid-template-rows: auto auto;
}

.snackbar.signin-prompt > .snackbar-message {
  grid-row: 2;
  grid-column: 1 / -1;
  padding-top: 0;
  padding-right: 16px;
}

.signin-button-container {
  padding: 8px 0;
  margin-left: -8px;
  height: 40px;
  overflow: hidden;
}


/*
 * Bouton installer
 */

[data-action="install-app"] {
  /*position: absolute;
  bottom: calc(0.5*(56px - 30px));
  right: 20px;*/
  display: none;
}


/*
 * Sign-in with Google
 */

#google-signin-button-container {
  color-scheme: light;
  width: fit-content;
  height: fit-content;
  margin: 8px auto;
  overflow: hidden;
}

#google-one-tap-container {
  color-scheme: light;
  display: flex;
  justify-content: center;
  width: fit-content;
  height: fit-content;
  overflow: hidden;
  margin: auto;
}

iframe[src^="https://accounts.google.com"] {
  color-scheme: light;
}

body:not([data-logged-in="true"]) [data-logged-in],
body[data-logged-in="true"] [data-logged-out],
body[data-public-profile="true"] [data-no-public-profile],
body[data-has-username="true"] [data-no-username],
body[data-logged-in="true"][data-public-profile="true"][data-has-username="true"] [data-not-shared],
body:not([data-logged-in="true"]) [data-shared],
body:not([data-public-profile="true"]) [data-shared],
body:not([data-has-username="true"]) [data-shared] {
  display: none !important;
}

